# zero-to-production-in-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  railway.toml  rustfmt.toml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230306005453_make_status_not_null_in_subscriptions.sql
scripts/: Initialize-Database.ps1  deploy.sh  deploy_railway_v2.sh  deploy_railway_v3.sh  init-cloud-db.sh  init-local-db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
